# django-better-json-widget

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ci.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: workflow-package.yml
better_json_widget/: apps.py  widgets.py
better_json_widget/templates/better_json_widget/: better_json_widget.html
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
tests/: conftest.py  test_widgets.py
tests/test_example/: test_some_function.py
